@@ -1,6 +1,6 @@
 [Setup]
 AppName=Xpra
-AppVerName=Xpra 0.0.7.19
+AppVerName=Xpra 0.0.7.20
 AppPublisher=devloop
 AppPublisherURL=http://xpra.devloop.org.uk/
 DefaultDirName={pf}\Xpra
@@ -10,7 +10,7 @@ OutputBaseFilename=setup
 Compression=lzma
 SolidCompression=true
 AllowUNCPath=false
-VersionInfoVersion=0.0.7.19
+VersionInfoVersion=0.0.7.20
 VersionInfoCompany=devloop
 VersionInfoDescription=screen for X
 
